# flashcard-manager

./: .env.example  API.md  CLAUDE.md  Procfile  README.md  build.sh  instructions.md  manage.py  new-nav.md  pyproject.toml  render.yaml
accounts/: admin.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
flashcard_collections/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
flashcard_collections/migrations/: 0001_initial.py
flashcard_manager/: asgi.py  settings.py  urls.py  wsgi.py
flashcards/: admin.py  collection_forms.py  curriculum_forms.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
flashcards/api/: __init__.py  serializers.py  views.py
flashcards/migrations/: 0001_initial.py  0002_alter_flashcard_back_alter_flashcard_front_and_more.py  0002_restructure_for_api.py  0003_flashcardcollection_historicalflashcardcollection.py  0004_collection_appearance_fields.py  0005_historicalflashcardcollection_card_bg_color_and_more.py  0006_flashcard_back_image_flashcard_back_layout_and_more.py  0007_flashcard_back_extra_flashcard_back_extra_style_and_more.py  0008_curriculum_historicalcurriculum_historicalsubject_and_more.py
flashcards/models/: __init__.py  flashcard.py  user.py
flashcards/serializers/: __init__.py  flashcard.py
flashcards/views/: __init__.py  auth.py  collection_views.py  csv_upload.py  curriculum_views.py  flashcard.py  flashcard_views.py
templates/: base.html  home.html
templates/accounts/: login.html  settings.html
(+27 files in other folders)
